overflow-x fix

--- a/css/main.css
+++ b/css/main.css
@@ -1583,11 +1583,6 @@ button {
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
-}
-
-body {
-  overflow-x: hidden;
 }
 
 *::-moz-selection {
@@ -2333,6 +2328,12 @@ body {
 /*MOBILE*/
 /**************************/
 @media (max-width: 53.125em) {
+  html {
+    overflow-x: hidden;
+  }
+  body {
+    overflow-x: hidden;
+  }
   .grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
