--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,9 +1,5 @@
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
-}
-body {
-  overflow-x: hidden;
 }
 
 *::-moz-selection {
